Fixed bug isInit should be result of null check of oop